--- a/Dockerfile.ubuntu.xfce.vnc
+++ b/Dockerfile.ubuntu.xfce.vnc
@@ -15,8 +15,8 @@ LABEL io.k8s.description="Headless VNC Container with Xfce window manager, firef
 # VNC port:5901
 # noVNC webport, connect via http://IP:6901/?password=vncpassword
 ENV DISPLAY=:1 \
-    VNC_PORT=5901 \
-    NO_VNC_PORT=6901
+    VNC_PORT=6956 \
+    NO_VNC_PORT=6951
 EXPOSE $VNC_PORT $NO_VNC_PORT
 
 ### Envrionment config
@@ -27,7 +27,7 @@ ENV HOME=/headless \
     NO_VNC_HOME=/headless/noVNC \
     DEBIAN_FRONTEND=noninteractive \
     VNC_COL_DEPTH=24 \
-    VNC_RESOLUTION=1280x1024 \
+    VNC_RESOLUTION=1440x900 \
     VNC_PW=vncpassword \
     VNC_VIEW_ONLY=false
 WORKDIR $HOME
